--- a/arangodb.bib
+++ b/arangodb.bib
@@ -100,3 +100,14 @@ urldate = {2020-04-10}
  year = {2000},
  doi = {10.1145/343477.343502}
 }
+@book{robertson_probabilistic_2009,
+	title = {The {Probabilistic} {Relevance} {Framework}: {BM25} and {Beyond}},
+	isbn = {978-1-60198-308-4},
+	shorttitle = {The {Probabilistic} {Relevance} {Framework}},
+	abstract = {The Probabilistic Relevance Framework (PRF) is a formal framework for document retrieval, grounded in work done in the 1970-80s, which led to the development of one of the most successful text-retrieval algorithms, BM25. In recent years, research in the PRF has yielded new retrieval models capable of taking into account structure and link-graph information. Again, this has led to one of the most successful web-search and corporate-search algorithms, BM25F. The Probabilistic Relevance Framework: BM25 and Beyond presents the PRF from a conceptual point of view, describing the probabilistic modelling assumptions behind the framework and the different ranking algorithms that result from its application: the binary independence model, relevance feedback models, BM25, BM25F. Besides presenting a full derivation of the PRF ranking algorithms, it provides many insights about document retrieval in general, and points to many open challenges in this area. It also discusses the relation between the PRF and other statistical models for IR, and covers some related topics, such as the use of non-textual features, and parameter optimization for models with free parameters. The Probabilistic Relevance Framework: BM25 and Beyond is self-contained and accessible to anyone with basic knowledge of probability and inference},
+	language = {en},
+	publisher = {Now Publishers Inc},
+	author = {Robertson, Stephen and Zaragoza, Hugo},
+	year = {2009},
+	note = {Google-Books-ID: yK6HxUEaZ9gC}
+}
